# Belcro

./: Dockerfile  Jenkinsfile  app.py  config.py  crawling.py  embed.py  evaluate.py  llm.py  models.py  parsers.py  pyproject.toml  requirements.txt
.github/workflows/: docker-image.yml
