[project]
name = "belcro-v1"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "fastmcp (==2.10.4)",
    "uvicorn (==0.35.0)",
    "pydantic (==2.11.7)",
    "aiohappyeyeballs (==2.6.1)",
    "aiohttp (==3.12.13)",
    "aiohttp-retry (==2.9.1)",
    "aiosignal (==1.3.2)",
    "annotated-types (==0.7.0)",
    "anyio (==4.9.0)",
    "appdirs (==1.4.4)",
    "async-timeout (==4.0.3)",
    "attrs (==25.3.0)",
    "authlib (==1.6.0)",
    "beautifulsoup4 (==4.13.4)",
    "certifi (==2025.6.15)",
    "cffi (==1.17.1)",
    "charset-normalizer (==3.4.2)",
    "click (==8.2.1)",
    "colorama (==0.4.6)",
    "contourpy (==1.3.2)",
    "cryptography (==45.0.5)",
    "cycler (==0.12.1)",
    "cyclopts (==3.22.2)",
    "dataclasses-json (==0.6.7)",
    "dill (==0.3.8)",
    "diskcache (==5.6.3)",
    "distro (==1.9.0)",
    "dnspython (==2.7.0)",
    "docstring-parser (==0.16)",
    "docutils (==0.21.2)",
    "email-validator (==2.2.0)",
    "exceptiongroup (==1.3.0)",
    "faiss-cpu (==1.11.0)",
    "fastapi (==0.115.14)",
    "filelock (==3.18.0)",
    "fonttools (==4.58.5)",
    "frozenlist (==1.7.0)",
    "fsspec (==2025.3.0)",
    "greenlet (==3.2.3)",
    "h11 (==0.16.0)",
    "httpcore (==1.0.9)",
    "httpx (==0.28.1)",
    "httpx-sse (==0.4.1)",
    "huggingface-hub (==0.33.2)",
    "idna (==3.10)",
    "iniconfig (==2.1.0)",
    "jinja2 (==3.1.6)",
    "jiter (==0.10.0)",
    "joblib (==1.5.1)",
    "jsonpatch (==1.33)",
    "jsonpointer (==3.0.0)",
    "jsonschema (==4.24.0)",
    "jsonschema-specifications (==2025.4.1)",
    "kiwisolver (==1.4.8)",
    "langchain (==0.3.26)",
    "langchain-community (==0.3.26)",
    "langchain-core (==0.3.67)",
    "langchain-openai (==0.3.27)",
    "langchain-pinecone (==0.2.8)",
    "langchain-tests (==0.3.20)",
    "langchain-text-splitters (==0.3.8)",
    "langchain-upstage (==0.6.0)",
    "langsmith (==0.4.4)",
    "lxml (==6.0.0)",
    "markdown-it-py (==3.0.0)",
    "markupsafe (==3.0.2)",
    "marshmallow (==3.26.1)",
    "mcp (==1.10.1)",
    "mdurl (==0.1.2)",
    "mpmath (==1.3.0)",
    "multidict (==6.6.3)",
    "multiprocess (==0.70.16)",
    "mypy-extensions (==1.1.0)",
    "nest-asyncio (==1.6.0)",
    "networkx (==3.4.2)",
    "openai (==1.93.0)",
    "openapi-pydantic (==0.5.1)",
    "orjson (==3.10.18)",
    "packaging (==24.2)",
    "pandas (==2.3.0)",
    "pillow (==11.3.0)",
    "pinecone (==7.3.0)",
    "pinecone-plugin-assistant (==1.7.0)",
    "pinecone-plugin-interface (==0.0.7)",
    "pluggy (==1.6.0)",
    "propcache (==0.3.2)",
    "py-cpuinfo (==9.0.0)",
    "pyarrow (==20.0.0)",
    "pycparser (==2.22)",
    "pydantic-core (==2.33.2)",
    "pydantic-settings (==2.10.1)",
    "pygments (==2.19.2)",
    "pyparsing (==3.2.3)",
    "pypdf (==4.3.1)",
    "pyperclip (==1.9.0)",
    "python-dateutil (==2.9.0.post0)",
    "python-dotenv (==1.1.1)",
    "python-multipart (==0.0.20)",
    "pytz (==2025.2)",
    "pyyaml (==6.0.2)",
    "rank-bm25 (==0.2.2)",
    "referencing (==0.36.2)",
    "regex (==2024.11.6)",
    "requests (==2.32.4)",
    "requests-toolbelt (==1.0.0)",
    "rich (==14.0.0)",
    "rich-rst (==1.3.1)",
    "rpds-py (==0.26.0)",
    "safetensors (==0.5.3)",
    "six (==1.17.0)",
    "sniffio (==1.3.1)",
    "soupsieve (==2.7)",
    "sqlalchemy (==2.0.41)",
    "sse-starlette (==2.4.1)",
    "starlette (==0.46.2)",
    "sympy (==1.14.0)",
    "syrupy (==4.9.1)",
    "tenacity (==9.1.2)",
    "threadpoolctl (==3.6.0)",
    "tiktoken (==0.9.0)",
    "tokenizers (==0.19.1)",
    "tomli (==2.2.1)",
    "tqdm (==4.67.1)",
    "typing-extensions (==4.14.0)",
    "typing-inspect (==0.9.0)",
    "typing-inspection (==0.4.1)",
    "tzdata (==2025.2)",
    "u (==1.0.4)",
    "urllib3 (==1.26.20)",
    "vcrpy (==7.0.0)",
    "wrapt (==1.17.2)",
    "xxhash (==3.5.0)",
    "yarl (==1.20.1)",
    "zstandard (==0.23.0)"
]

[tool.poetry.group.dev.dependencies]
pytest = "8.4.1"
pytest-asyncio = "0.26.0"
pytest-benchmark = "5.1.0"
pytest-codspeed = "3.2.0"
pytest-recording = "0.13.4"
pytest-socket = "0.7.0"
langchain = "0.3.26"
datasets = "3.6.0"
ragas = "0.2.15"
transformers = "4.44.2"
torch = "2.7.1"
scikit-learn = "1.7.0"
numpy = "2.2.6"
scipy = "1.15.3"
seaborn = "0.13.2"
matplotlib = "3.10.3"



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
